--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="row">
       <h1>Let The Best Player Win!</h1>
     </div>
-    <div class="row">
+    <div class="row resultcontainer">
       <div class="dice col firstdiv">
         <h2>Player One</h2>
         <img src="Images/dice6.png" alt="gamedie" id="diceimage1">
